[gd_scene load_steps=25 format=3 uid="uid://cwj00u1myusug"]

[ext_resource type="Script" path="res://scripts/corral.gd" id="1_aws85"]
[ext_resource type="PackedScene" uid="uid://c1np7vko01cmp" path="res://scenes/cage.tscn" id="2_6mnav"]
[ext_resource type="PackedScene" uid="uid://bmjip7nsmy66e" path="res://scenes/sheep.tscn" id="3_a76w7"]
[ext_resource type="PackedScene" uid="uid://dndpvioyudhhl" path="res://scenes/monster.tscn" id="4_fnipf"]
[ext_resource type="PackedScene" uid="uid://1knj7p4t1v2h" path="res://scenes/cowboy.tscn" id="4_jb8n6"]
[ext_resource type="Texture2D" uid="uid://csoxul62clj8f" path="res://assets/sprites/Background_Main.png" id="5_1gstk"]
[ext_resource type="PackedScene" uid="uid://yr65f5hdo3a4" path="res://scenes/hud.tscn" id="6_23cdu"]
[ext_resource type="Texture2D" uid="uid://vi4s246u6qi" path="res://assets/sprites/Background_Fence.png" id="7_o1xjs"]
[ext_resource type="Texture2D" uid="uid://c32qnbsd5wqjc" path="res://assets/sprites/Lightning.png" id="8_muqj2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5pe34"]
size = Vector2(15, 715)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xatra"]
size = Vector2(1270, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_wblyh"]
atlas = ExtResource("8_muqj2")
region = Rect2(0, 0, 64, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwf61"]
atlas = ExtResource("8_muqj2")
region = Rect2(64, 0, 64, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_qw6ve"]
atlas = ExtResource("8_muqj2")
region = Rect2(128, 0, 64, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_axiuj"]
atlas = ExtResource("8_muqj2")
region = Rect2(192, 0, 64, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_7nxd0"]
atlas = ExtResource("8_muqj2")
region = Rect2(256, 0, 64, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_bt30f"]
atlas = ExtResource("8_muqj2")
region = Rect2(320, 0, 64, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_pxecq"]
atlas = ExtResource("8_muqj2")
region = Rect2(384, 0, 64, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4r37"]
atlas = ExtResource("8_muqj2")
region = Rect2(448, 0, 64, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_xsktq"]
atlas = ExtResource("8_muqj2")
region = Rect2(512, 0, 64, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_4sfgq"]
atlas = ExtResource("8_muqj2")
region = Rect2(576, 0, 64, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_gti4d"]
atlas = ExtResource("8_muqj2")
region = Rect2(640, 0, 64, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8d2q"]
atlas = ExtResource("8_muqj2")
region = Rect2(704, 0, 64, 800)

[sub_resource type="SpriteFrames" id="SpriteFrames_cgkgf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wblyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwf61")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qw6ve")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axiuj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7nxd0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bt30f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pxecq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4r37")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsktq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4sfgq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gti4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8d2q")
}],
"loop": false,
"name": &"Strike",
"speed": 25.0
}]

[node name="Corral" type="Node2D"]
script = ExtResource("1_aws85")
spawn_bounds = Vector4(-500, -250, 500, 250)
lightning_range = Vector2(12, 16)
cage_scene = ExtResource("2_6mnav")
sheep_scene = ExtResource("3_a76w7")
monster_scene = ExtResource("4_fnipf")

[node name="BackgroundContainer" type="MarginContainer" parent="."]
z_index = -2
texture_filter = 1
offset_left = -640.0
offset_top = -360.0
offset_right = 640.0
offset_bottom = 360.0

[node name="Background" type="TextureRect" parent="BackgroundContainer"]
layout_mode = 2
texture = ExtResource("5_1gstk")

[node name="Walls" type="StaticBody2D" parent="."]
collision_mask = 15

[node name="Wall1" type="CollisionShape2D" parent="Walls"]
position = Vector2(-641, 1)
shape = SubResource("RectangleShape2D_5pe34")

[node name="Wall2" type="CollisionShape2D" parent="Walls"]
position = Vector2(641, 10)
shape = SubResource("RectangleShape2D_5pe34")

[node name="Wall3" type="CollisionShape2D" parent="Walls"]
position = Vector2(0, 370)
shape = SubResource("RectangleShape2D_xatra")

[node name="Wall4" type="CollisionShape2D" parent="Walls"]
position = Vector2(0, -264)
shape = SubResource("RectangleShape2D_xatra")

[node name="CageTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="SheepTimer" type="Timer" parent="."]

[node name="LightningTimer" type="Timer" parent="."]

[node name="LightningEndTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="KnockbackCd" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="GunCd" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="SprintCd" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Cowboy" parent="." instance=ExtResource("4_jb8n6")]

[node name="HUD" parent="." instance=ExtResource("6_23cdu")]

[node name="FenceContainer" type="MarginContainer" parent="."]
z_index = 10
texture_filter = 1
offset_left = -640.0
offset_top = -360.0
offset_right = 640.0
offset_bottom = 360.0

[node name="TextureRect" type="TextureRect" parent="FenceContainer"]
layout_mode = 2
texture = ExtResource("7_o1xjs")

[node name="LightningStrike" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_cgkgf")
animation = &"Strike"

[connection signal="timeout" from="CageTimer" to="." method="spawn_new_cage"]
[connection signal="timeout" from="SheepTimer" to="." method="spawn_random_sheep"]
[connection signal="timeout" from="LightningTimer" to="." method="on_lightning_strike"]
[connection signal="timeout" from="LightningEndTimer" to="." method="on_lightning_strike_end"]
[connection signal="timeout" from="KnockbackCd" to="." method="_on_knockback_cd_timeout"]
[connection signal="timeout" from="GunCd" to="." method="_on_gun_cd_timeout"]
[connection signal="timeout" from="SprintCd" to="." method="_on_sprint_cd_timeout"]
[connection signal="gun_used" from="Cowboy" to="." method="_on_cowboy_gun_used"]
[connection signal="knockback_used" from="Cowboy" to="." method="_on_cowboy_knockback_used"]
[connection signal="sprint_used" from="Cowboy" to="." method="_on_cowboy_sprint_used"]
